# learning-eng

./: .gitignore  Cargo.toml  README.md
doc/: note.md
front-end/: package.json
src/: main.rs  upload_subtitles.rs
src/search_engine/: document.rs  engine.rs  index.rs  mod.rs  search_service.rs
src/subtitle/: ass.rs  mod.rs  srt.rs
