[package]
name = "english-study"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ass = "1.1.2"
ass_parser = "0.1.4"
axum = {version = "0.7.5", features = ["tokio", "http1"]}
encoding_rs = "0.8.34"
regex = "1.10.6"
tantivy = "0.22.0"
tempfile = "3.12.0"
tokio = { version = "1.29.1", features = ["full"] }
hyper = "1.4.1"


chrono = { version = "0.4.26", features = ["serde"] }
once_cell = "1.19"
tracing = { version = "0.1.37", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
tracing-appender = "0.2.3"
http = "1.1.0"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4.1", features = ["full"] }
axum-server = "0.7.1"
